# ai-cli

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
api/: __init__.py  server.py
commands/: __init__.py  analyze.py  api.py  bootstrap.py  chat.py  explain.py  fix.py  fix_project.py  memory.py  remote.py
core/: __init__.py  agent.py
docs/: GCP_VM_MANUAL_SETUP.md
docs/systemd/: aicli-api.env.example  aicli-api.service
providers/: __init__.py  ollama_provider.py
services/: __init__.py  agent_service.py  analyze_service.py  auth_service.py  auth_state_factory.py  auth_state_store.py  auth_state_store_redis.py  device_auth_service.py  fix_service.py  memory_service.py
tests/: test_advanced_cli.py  test_agent_project_flow.py  test_api_auth_workspace.py  test_auth_state_factory.py  test_bootstrap_remote_client.py  test_device_auth_persistence.py  test_device_auth_service.py  test_file_reader.py  test_memory_command.py  test_remote_commands.py  test_remote_token_refresh.py  test_security_and_auth.py  test_services_and_api.py  test_utils_io_and_scan.py
utils/: __init__.py  analysis_memory.py  cli_config.py  code_analyzer.py  file_editor.py  file_reader.py  file_writer.py  path_guard.py  project_scanner.py  shell_runner.py
