[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cli-agent"
version = "0.1.0"
description = "Local and remote coding assistant CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.17.4",
  "requests>=2.32.5",
  "fastapi>=0.135.1",
  "uvicorn>=0.41.0",
  "httpx>=0.28.1",
  "redis>=5.2.1",
]

[project.scripts]
aicli = "main:cli"

[tool.setuptools]
py-modules = ["main", "config"]

[tool.setuptools.packages.find]
include = ["api*", "commands*", "core*", "providers*", "services*", "utils*"]
